Added Subrepo456 as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Subrepo123"]
 	path = Subrepo123
 	url = https://github.com/staudenmaiermax/subrepo123
+[submodule "Subrepo456"]
+	path = Subrepo456
+	url = https://github.com/staudenmaiermax/Subrepo456
